--- a/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "from ltr.ranklib import train\n",
-    "trainLog = train(client,\n",
+    "trainResponse = train(client,\n",
     "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genome',\n",
@@ -211,6 +211,7 @@
    "outputs": [],
    "source": [
     "print(\"Impact of each feature on the model\")\n",
+    "trainLog = trainResponse.trainingLogs[0]\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
     "    print(\"{} - {}\".format(ftrId, impact))\n",
     "    \n",
@@ -260,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
