--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -33,12 +33,19 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "from ltr.index import rebuild\n",
-    "from ltr.helpers.movies import indexable_movies\n",
-    "\n",
     "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
     "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments.txt'\n",
-    "download([corpus, judgments], dest='data/');\n",
+    "download([corpus, judgments], dest='data/');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
     "\n",
     "movies=indexable_movies(movies='data/tmdb.json')\n",
     "rebuild(client, index='tmdb', doc_src=movies)"
@@ -197,7 +204,7 @@
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
-    "                                               features=[1,2,3,4,5,6,7],\n",
+    "                                               features=[1,2,7],\n",
     "                                               featureSet='title')\n",
     "\n",
     "print()\n",
@@ -242,7 +249,7 @@
    "outputs": [],
    "source": [
     "from ltr.ranklib import train\n",
-    "trainLog  = train(client,\n",
+    "trainResponse  = train(client,\n",
     "                  training_set=ftr_logger.logged,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
@@ -251,6 +258,8 @@
     "                  index='tmdb',\n",
     "                  featureSet='title',\n",
     "                  modelName='title')\n",
+    "\n",
+    "trainLog = trainResponse.trainingLogs[0]\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -286,7 +295,7 @@
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
     "                                               featureCost=0.02,# 1.0-cost ^ num_features\n",
-    "                                               features=[1,2,3,4,5,6,7],\n",
+    "                                               features=[1,2,7],\n",
     "                                               featureSet='title')\n",
     "\n",
     "print()\n",
@@ -684,7 +693,7 @@
    "outputs": [],
    "source": [
     "from ltr.ranklib import train\n",
-    "trainLog  = train(client,\n",
+    "trainResponse  = train(client,\n",
     "                  training_set=ftr_logger.logged,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
@@ -693,6 +702,8 @@
     "                  features=[1,4,6,7,8],\n",
     "                  featureSet='title2',\n",
     "                  modelName='title2')\n",
+    "\n",
+    "trainLog = trainResponse.trainingLogs[0]\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -771,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
