--- a/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
@@ -214,12 +214,14 @@
    "outputs": [],
    "source": [
     "from ltr.ranklib import train\n",
-    "trainLog = train(client,\n",
+    "trainResponse = train(client,\n",
     "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
     "                 modelName='genre')\n",
+    "\n",
+    "trainLog = trainResponse.trainingLogs[0]\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -244,7 +246,7 @@
    "outputs": [],
    "source": [
     "from ltr.search import search\n",
-    "search(client, keywords=\"science fiction\", modelName=\"genre\")"
+    "search(client, keywords=\"drama\", modelName=\"genre\")"
    ]
   },
   {
@@ -287,12 +289,14 @@
     "        \n",
     "        \n",
     "from ltr.ranklib import train\n",
-    "trainLog = train(client,\n",
+    "trainResponse = train(client,\n",
     "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
     "                 modelName='genre')\n",
+    "\n",
+    "trainLog = trainResponse.trainingLogs[0]\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -365,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
