--- a/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
+++ b/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
@@ -144,6 +144,7 @@
     "from ltr.judgments import judgments_open\n",
     "from ltr.log import FeatureLogger\n",
     "from itertools import groupby\n",
+    "from tqdm import tqdm\n",
     "\n",
     "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genome')\n",
     "with judgments_open('data/genome_judgments.txt') as judg_list:\n",
@@ -172,7 +173,7 @@
    "outputs": [],
    "source": [
     "from ltr.ranklib import train\n",
-    "trainLog = train(client,\n",
+    "trainResponse = train(client,\n",
     "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genome',\n",
@@ -196,6 +197,7 @@
    "outputs": [],
    "source": [
     "print(\"Impact of each feature on the model\")\n",
+    "trainLog = trainResponse.trainingLogs[0]\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
     "    print(\"{} - {}\".format(ftrId, impact))\n",
     "    \n",
@@ -220,7 +222,7 @@
    "outputs": [],
    "source": [
     "from ltr import search\n",
-    "search(client, \"batman\", modelName='genome')"
+    "search(client, \"brad pitt\", modelName='genome')"
    ]
   },
   {
@@ -245,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
