--- a/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
+++ b/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
@@ -184,12 +184,14 @@
    "outputs": [],
    "source": [
     "from ltr.ranklib import train\n",
-    "trainLog = train(client, \n",
+    "trainResponse = train(client, \n",
     "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
     "                 index='tmdb',\n",
     "                 modelName='genre')\n",
+    "\n",
+    "trainLog = trainResponse.trainingLogs[0]\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -214,7 +216,7 @@
    "outputs": [],
    "source": [
     "from ltr.search import search\n",
-    "search(client, keywords=\"drama\", modelName=\"genre\")"
+    "search(client, keywords=\"blah blahbity blah\", modelName=\"genre\")"
    ]
   },
   {
@@ -243,11 +245,18 @@
     "\n",
     "date_genre_judgments.synthesize(client,\n",
     "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
+    "                                autoNegate=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_genre_judgments.synthesize(client,\n",
+    "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
     "                                autoNegate=True)\n",
-    "\n",
-    "from ltr.judgments import judgments_from_file\n",
-    "from ltr.log import FeatureLogger\n",
-    "from itertools import groupby\n",
     "\n",
     "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
     "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
@@ -256,14 +265,15 @@
     "                               judgments=query_judgments,\n",
     "                               keywords=judg_list.keywords(qid))\n",
     "        \n",
-    "        \n",
-    "from ltr.ranklib import train\n",
-    "trainLog = train(client,\n",
+    "\n",
+    "trainResponse = train(client,\n",
     "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
     "                 index='tmdb',\n",
     "                 modelName='genre')\n",
+    "\n",
+    "trainLog = trainResponse.trainingLogs[0]\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
@@ -336,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
