--- a/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
@@ -212,8 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.ranklib import kcv\n",
-    "res  = kcv(client,\n",
+    "from ltr.ranklib import train\n",
+    "res  = train(client,\n",
     "            training_set=ftr_logger.logged,\n",
     "            metric2t='NDCG@10',\n",
     "            leafs=4,\n",
@@ -288,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
