--- a/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
@@ -128,7 +128,7 @@
    "source": [
     "## Is this thing on?\n",
     "\n",
-    "Before we dive into all the pieces, with a real training set, we'll try out two examples of models. One that always prefers newer movies. And another that always prefers older movies. If you're curious you can open `classic-training.txt` and `latest-training.txt` after running this to see what the training set looks like. "
+    "Before we dive into all the pieces, with a real training set, we'll try out two examples of models. One that always prefers newer movies. And another that always prefers older movies. If you're curious you can opet `classic-training.txt` and `latest-training.txt` after running this to see what the training set looks like. "
    ]
   },
   {
@@ -216,13 +216,6 @@
     "print('top results from latest model:')\n",
     "pd.json_normalize(latest_results)[['id', 'title', 'release_year', 'score']].head(12)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -231,7 +224,7 @@
    "language": "python",
    "name": "python3"
   },
-  "language_info": {
+ "language_info": {
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
