--- a/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
@@ -128,7 +128,7 @@
    "source": [
     "## Is this thing on?\n",
     "\n",
-    "Before we dive into all the pieces, with a real training set, we'll try out two examples of models. One that always prefers newer movies. And another that always prefers older movies. If you're curious you can open `classic-training.txt` and `latest-training.txt` after running this to see what the training set looks like. "
+    "Before we dive into all the pieces, with a real training set, we'll try out two examples of models. One that always prefers newer movies. And another that always prefers older movies. If you're curious you can opet `classic-training.txt` and `latest-training.txt` after running this to see what the training set looks like. "
    ]
   },
   {
@@ -190,8 +190,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.release_date_plot import plot\n",
-    "plot(client)"
+    "import ltr.release_date_plot as rdp\n",
+    "rdp.plot(client, 'batman')"
    ]
   },
   {
@@ -199,7 +199,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "classic_results = rdp.search(client, 'batman', 'classic')\n",
+    "print('top results from classic model:')\n",
+    "pd.json_normalize(classic_results)[['id', 'title', 'release_year']].head(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latest_results = rdp.search(client, 'batman', 'latest')\n",
+    "print('top results from latest model:')\n",
+    "pd.json_normalize(latest_results)[['id', 'title', 'release_year']].head(12)"
+   ]
   }
  ],
  "metadata": {
@@ -218,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
