--- a/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training - Guaraneed Perfect Search Results!\n",
+    "### Training - Guaranteed Perfect Search Results!\n",
     "\n",
     "We'll train a LambdaMART model against this training data."
    ]
