Showing relevance scores in the plot and in the ES hello LTR notebook.

--- a/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
@@ -199,11 +199,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "classic_results = rdp.search(client, 'batman', 'classic')\n",
     "print('top results from classic model:')\n",
-    "pd.json_normalize(classic_results)[['id', 'title', 'release_year']].head(12)"
+    "pd.json_normalize(classic_results)[['id', 'title', 'release_year', '_score']].head(12)"
    ]
   },
   {
@@ -214,7 +221,7 @@
    "source": [
     "latest_results = rdp.search(client, 'batman', 'latest')\n",
     "print('top results from latest model:')\n",
-    "pd.json_normalize(latest_results)[['id', 'title', 'release_year']].head(12)"
+    "pd.json_normalize(latest_results)[['id', 'title', 'release_year', '_score']].head(12)"
    ]
   }
  ],
