Drop stray parend in solr netfix

--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -78,7 +78,7 @@
     "      \"store\": \"title\",\n",
     "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
     "      \"params\" : {\n",
-    "        \"q\" : \"title:\\\"${keywords})\\\"^=1\"\n",
+    "        \"q\" : \"title:\\\"${keywords}\\\"^=1\"\n",
     "      }\n",
     "    },\n",
     "    #2\n",
