Show feature names when printing impacts

--- a/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
@@ -213,7 +213,7 @@
     "print(\"Impact of each feature on the model\")\n",
     "trainLog = trainResponse.trainingLogs[0]\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "print(\"trainLog Metric %s\" % trainLog.metric())"
    ]
