--- a/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
@@ -230,7 +230,7 @@
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in res.trainingLogs[0].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "    \n",
     "print(\"Test NDCG@10 %s\" % res.kcvTestAvg)"
