--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -211,7 +211,7 @@
     "print(\"Impact of each feature on the model\")\n",
     "trainLogs = rankLibResult.trainingLogs\n",
     "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLogs[-1].rounds:\n",
     "    print(roundDcg)\n",
@@ -264,7 +264,7 @@
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLog.rounds:\n",
     "    print(roundDcg)\n",
@@ -302,7 +302,7 @@
     "print(\"Impact of each feature on the model\")\n",
     "trainLogs = rankLibResult.trainingLogs\n",
     "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLogs[-1].rounds:\n",
     "    print(roundDcg)\n",
@@ -674,7 +674,7 @@
     "print(\"Impact of each feature on the model\")\n",
     "trainLogs = rankLibResult.trainingLogs\n",
     "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLogs[-1].rounds:\n",
     "    print(roundDcg)\n",
@@ -708,7 +708,7 @@
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLog.rounds:\n",
     "    print(roundDcg)\n",
