--- a/notebooks/elasticsearch/tmdb/sandbox.ipynb
+++ b/notebooks/elasticsearch/tmdb/sandbox.ipynb
@@ -113,7 +113,7 @@
     "  Does a high leaf value increase your NDCG?  What could be the potential downfalls?\n",
     "'''\n",
     "from ltr.ranklib import train\n",
-    "trainLog  = train(client,\n",
+    "trainResponse  = train(client,\n",
     "                  index='tmdb',\n",
     "                  training_set=ftr_logger.logged,\n",
     "                  metric2t='NDCG@10',\n",
@@ -122,10 +122,12 @@
     "                  featureSet='sandbox',\n",
     "                  modelName='sandbox')\n",
     "\n",
+    "trainLog = trainResponse.trainingLogs[0]",
+    "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLog.rounds:\n",
     "    print(roundDcg)\n",
