--- a/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
@@ -226,7 +226,7 @@
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "print(\"Perfect NDCG! {}\".format(trainLog.rounds[-1]))"
    ]
@@ -301,7 +301,7 @@
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "print(\"NDCG {}\".format(trainLog.rounds[-1]))"
    ]
