--- a/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
+++ b/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
@@ -196,7 +196,7 @@
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "print(\"Perfect NDCG! {}\".format(trainLog.rounds[-1]))"
    ]
@@ -278,7 +278,7 @@
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "print(\"NDCG! {}\".format(trainLog.rounds[-1]))"
    ]
