--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -209,7 +209,7 @@
     "print(\"Impact of each feature on the model\")\n",
     "trainLogs = rankLibResult.trainingLogs\n",
     "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLogs[-1].rounds:\n",
     "    print(roundDcg)\n",
@@ -263,7 +263,7 @@
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLog.rounds:\n",
     "    print(roundDcg)\n",
@@ -301,7 +301,7 @@
     "print(\"Impact of each feature on the model\")\n",
     "trainLogs = rankLibResult.trainingLogs\n",
     "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLogs[-1].rounds:\n",
     "    print(roundDcg)\n",
@@ -694,7 +694,7 @@
     "print(\"Impact of each feature on the model\")\n",
     "trainLogs = rankLibResult.trainingLogs\n",
     "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLogs[-1].rounds:\n",
     "    print(roundDcg)\n",
@@ -753,7 +753,7 @@
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLog.rounds:\n",
     "    print(roundDcg)\n",
@@ -1004,7 +1004,7 @@
     "print(\"Impact of each feature on the model\")\n",
     "trainLogs = rankLibResult.trainingLogs\n",
     "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    print(\"{} - {}\".format(client.get_feature_name(config, ftrId), impact))\n",
     "    \n",
     "for roundDcg in trainLogs[-1].rounds:\n",
     "    print(roundDcg)\n",
