May have found a bug with matching terms, switching default to the unique terms.

--- a/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
+++ b/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
@@ -67,12 +67,12 @@
     "                }\n",
     "            },\n",
     "            {\n",
-    "                \"name\": \"tsq_script_title_matching_terms\",\n",
+    "                \"name\": \"tsq_script_title_unique_terms\",\n",
     "                \"params\": [\"keywords\"],\n",
     "                \"template_language\": \"script_feature\",\n",
     "                \"template\": {\n",
     "                    \"lang\": \"painless\",\n",
-    "                    \"source\": \"params.matchCount.get()\",\n",
+    "                    \"source\": \"params.uniqueTerms\",\n",
     "                    \"params\": {\n",
     "                        \"term_stat\": {\n",
     "                            \"analyzer\": \"!standard\",\n",
