Fix params spec

--- a/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
+++ b/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
@@ -68,7 +68,7 @@
     "            },\n",
     "            {\n",
     "                \"name\": \"tsq_script_title_unique_terms\",\n",
-    "                \"params\": [\"keywords\"],\n",
+    "                \"params\": [\"keywordsList\"],\n",
     "                \"template_language\": \"script_feature\",\n",
     "                \"template\": {\n",
     "                    \"lang\": \"painless\",\n",
