Don't step on sandbox stores

--- a/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
+++ b/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
@@ -87,7 +87,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "client.create_featureset(index='tmdb', name='sandbox', ftr_config=config)"
+    "client.create_featureset(index='tmdb', name='tsq', ftr_config=config)"
    ]
   },
   {
@@ -107,7 +107,7 @@
     "from ltr.judgments import judgments_open, to_dataframe\n",
     "from itertools import groupby\n",
     "\n",
-    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='sandbox')\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='tsq')\n",
     "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
     "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
     "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
@@ -143,8 +143,8 @@
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
-    "                  featureSet='sandbox',\n",
-    "                  modelName='sandbox')\n",
+    "                  featureSet='tsq',\n",
+    "                  modelName='tsq')\n",
     "\n",
     "trainLog = trainResponse.trainingLogs[0]\n",
     "print()\n",
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "from ltr import search\n",
-    "search(client, \"rambo\", modelName='sandbox')"
+    "search(client, \"rambo\", modelName='tsq')"
    ]
   },
   {
