--- a/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
+++ b/notebooks/elasticsearch/tmdb/term-stat-query.ipynb
@@ -4,8 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sandbox\n",
-    "This notebook covers the main steps in deploying a model.  Experimentation with features is encouraged.  Can you increase the NDCG reported during model training?"
+    "# TermStatQuery\n",
+    "Introduced in ES-LTR v1.5.2, the TermStatQuery provides for access to deep level statistics available in Lucene expression and Painless scripting contexts.\n",
+    "\n",
+    "This allows feature engineers to easily experiment with features derived directly from the index without having to write any Java code.\n",
+    "\n",
+    "Review the documentation [here](https://elasticsearch-learning-to-rank.readthedocs.io/en/latest/advanced-functionality.html#termstat-query) and use the notebook below to experiment with the functionality that the TermStatQuery provides."
    ]
   },
   {
@@ -40,12 +44,9 @@
    "source": [
     "'''\n",
     "  TASK:\n",
-    "  Experiment with this featureset, the judgments are all title searches so what features could be useful?\n",
-    "  \n",
-    "  Ideas:\n",
-    "    - Search other fields\n",
-    "    - Phrase matches\n",
-    "    - Fuzzy matches\n",
+    "  Experiment with the TermStatQuery\n",
+    "  - Create a feature that utilizes a lucene expression.\n",
+    "  - Create a feature that utilizes painless scripting\n",
     "'''\n",
     "\n",
     "client.reset_ltr(index='tmdb')\n",
@@ -54,19 +55,39 @@
     "   \"featureset\": {\n",
     "        \"features\": [\n",
     "            {\n",
-    "                \"name\": \"title_match\",\n",
+    "                \"name\": \"tsq_expr_title_tfidf\",\n",
     "                \"params\": [\"keywords\"],\n",
     "                \"template\": {\n",
-    "                    \"match\": {\n",
-    "                        \"title\": \"{{keywords}}\"\n",
+    "                    \"term_stat\": {\n",
+    "                        \"expr\": \"tf * idf\",             # The lucene expression evaluated for each term\n",
+    "                        \"aggr\": \"max\",                  # How are the calcuated expressions for each term aggregated?\n",
+    "                        \"terms\": [\"{{keywords}}\"],      # The list of terms to run the expr on\n",
+    "                        \"fields\": [\"title\"]             # Which fields to lookup terms in\n",
     "                    }\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"tsq_script_title_unique_terms\",\n",
+    "                \"params\": [\"keywordsList\"],\n",
+    "                \"template_language\": \"script_feature\",\n",
+    "                \"template\": {\n",
+    "                    \"lang\": \"painless\",\n",
+    "                    \"source\": \"params.uniqueTerms\",\n",
+    "                    \"params\": {\n",
+    "                        \"term_stat\": {\n",
+    "                            \"analyzer\": \"!standard\",\n",
+    "                            \"terms\": \"keywordsList\",\n",
+    "                            \"fields\": [\"title\"]\n",
+    "                        }\n",
+    "                    }\n",
+    "                    \n",
     "                }\n",
     "            }\n",
     "        ]\n",
     "    }\n",
     "}\n",
     "\n",
-    "client.create_featureset(index='tmdb', name='sandbox', ftr_config=config)"
+    "client.create_featureset(index='tmdb', name='tsq', ftr_config=config)"
    ]
   },
   {
@@ -83,15 +104,18 @@
    "outputs": [],
    "source": [
     "from ltr.log import FeatureLogger\n",
-    "from ltr.judgments import judgments_open\n",
+    "from ltr.judgments import judgments_open, to_dataframe\n",
     "from itertools import groupby\n",
     "\n",
-    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='sandbox')\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='tsq')\n",
     "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
     "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
     "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
     "                               qid=qid,\n",
-    "                               keywords=judgment_list.keywords(qid))\n"
+    "                               keywords=judgment_list.keywords(qid))\n",
+    "\n",
+    "df = to_dataframe(ftr_logger.logged)\n",
+    "df"
    ]
   },
   {
@@ -119,8 +143,8 @@
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
-    "                  featureSet='sandbox',\n",
-    "                  modelName='sandbox')\n",
+    "                  featureSet='tsq',\n",
+    "                  modelName='tsq')\n",
     "\n",
     "trainLog = trainResponse.trainingLogs[0]\n",
     "print()\n",
@@ -148,7 +172,7 @@
    "outputs": [],
    "source": [
     "from ltr import search\n",
-    "search(client, \"rambo\", modelName='sandbox')"
+    "search(client, \"rambo\", modelName='tsq')"
    ]
   },
   {
@@ -175,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
