--- a/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
@@ -231,7 +231,7 @@
    "language": "python",
    "name": "python3"
   },
-language_info": {
+ "language_info": {
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
