port Ashish's score logic to Solr

--- a/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
+++ b/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
@@ -166,8 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.release_date_plot import plot\n",
-    "plot(client)"
+    "import ltr.release_date_plot as rdp\n",
+    "rdp.plot(client, 'why does no one care')"
    ]
   },
   {
@@ -183,7 +183,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "classic_results = rdp.search(client, 'batman', 'classic')\n",
+    "print('top results from classic model:')\n",
+    "pd.json_normalize(classic_results)[['id', 'title', 'release_year', 'score']].head(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latest_results = rdp.search(client, 'batman', 'latest')\n",
+    "print('top results from latest model:')\n",
+    "pd.json_normalize(latest_results)[['id', 'title', 'release_year', 'score']].head(12)"
+   ]
   }
  ],
  "metadata": {
@@ -202,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
