--- a/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
@@ -199,18 +199,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "classic_results = rdp.search(client, 'batman', 'classic')\n",
     "print('top results from classic model:')\n",
-    "pd.json_normalize(classic_results)[['id', 'title', 'release_year', '_score']].head(12)"
+    "pd.json_normalize(classic_results)[['id', 'title', 'release_year', 'score']].head(12)"
    ]
   },
   {
@@ -221,8 +214,15 @@
    "source": [
     "latest_results = rdp.search(client, 'batman', 'latest')\n",
     "print('top results from latest model:')\n",
-    "pd.json_normalize(latest_results)[['id', 'title', 'release_year', '_score']].head(12)"
+    "pd.json_normalize(latest_results)[['id', 'title', 'release_year', 'score']].head(12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -231,7 +231,7 @@
    "language": "python",
    "name": "python3"
   },
- "language_info": {
+  "language_info": {
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
@@ -241,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
